CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0 FATAL_ERROR)

PROJECT(fetch_web_content)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

FIND_PACKAGE(Qt5Widgets REQUIRED)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../ qtnetworkng)

ADD_EXECUTABLE(fetch_web_content main.cpp)
TARGET_LINK_LIBRARIES(fetch_web_content Qt5::Widgets qtnetworkng)
